# infersight

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
crates/is-amd-ffi/: Cargo.toml  build.rs
crates/is-amd-ffi/amd_smi/: amd_smiConfig.h  kfd_ioctl.h
crates/is-amd-ffi/cpp/: amd_smi_wrapper.cpp
crates/is-amd-ffi/src/: lib.rs
crates/is-cli/: Cargo.toml
crates/is-cli/src/: cmd_export.rs  main.rs
crates/is-cli/src/cmd_ctl/: mod.rs
crates/is-ctl/: Cargo.toml
crates/is-ctl/src/: amd.rs  lib.rs  main.rs  nvidia.rs
crates/is-exporter/: .gitignore  Cargo.toml  README.md  build.rs
crates/is-exporter/amd_smi/: amdsmi.h
crates/is-exporter/cpp/: amd_smi_wrapper.cpp  amd_smi_wrapper.h
crates/is-exporter/src/: config.rs  error.rs  lib.rs  main.rs
crates/is-exporter/src/collector/: amd.rs  manager.rs  mod.rs  nvidia.rs  system.rs  tpu.rs
crates/is-exporter/src/exporter/: mod.rs  prometheus.rs
crates/is-exporter/src/metrics/: gpu_metrics.rs  mod.rs  registry.rs  system_metrics.rs
crates/is-nvidia/: Cargo.toml
crates/is-nvidia/src/: lib.rs  nvml_impl.rs
crates/is-top/: Cargo.toml  README.md
crates/is-top/src/: app.rs  gpu.rs  lib.rs  main.rs  system.rs  ui.rs
dashboards/: gpu-system-overview.json
