[package]
name = "is-amd-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "AMD SMI FFI bridge via CXX — shared library for AMD GPU operations"
build = "build.rs"

[features]
default = []
# When this feature is enabled AND on x86_64, the C++ AMD SMI bridge is compiled.
# Otherwise, stub implementations are provided.
amd = []

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
