[package]
name = "is-ctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "GPU power & clock control library & CLI — set performance levels, clocks, and power limits"

[features]
default = ["nvidia"]
nvidia = ["is-nvidia/nvidia"]
amd = ["is-amd-ffi/amd"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# NVIDIA (shared crate)
is-nvidia = { path = "../is-nvidia", default-features = false }

# AMD FFI (shared crate)
is-amd-ffi = { path = "../is-amd-ffi", default-features = false }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Colored terminal output
colored = "3"

# Serialization for output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "is-ctl"
path = "src/main.rs"

[lib]
name = "is_ctl"
path = "src/lib.rs"
