[package]
name = "is-exporter"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Professional GPU metrics exporter for Prometheus (AMD, NVIDIA, TPU, System)"

[features]
default = ["nvidia", "system"]
nvidia = ["is-nvidia/nvidia"]
amd = ["dep:is-amd-ffi"]
system = ["dep:sysinfo"]
tpu = ["dep:reqwest"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }

# Web framework for Prometheus endpoint
axum = "0.8"

# Metrics
prometheus = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait support
async-trait = "0.1"

# Lazy statics
once_cell = "1"

# Hostname detection
whoami = "1"

# Optional: NVIDIA support (via shared crate)
is-nvidia = { path = "../is-nvidia", default-features = false }

# Optional: System metrics
sysinfo = { version = "0.36", optional = true }

# Optional: TPU support (HTTP client for GCE metadata + TPU runtime)
reqwest = { version = "0.12", features = ["json"], optional = true }

# AMD SMI FFI (shared crate)
is-amd-ffi = { path = "../is-amd-ffi", default-features = false, features = ["amd"], optional = true }

[[bin]]
name = "is-exporter"
path = "src/main.rs"
